--- a/css/theme.css
+++ b/css/theme.css
@@ -41,11 +41,6 @@
     color: #83168e;
 }
 
-.theme-content
-{
-    border: 1px solid #222222;
-}
-
 .theme-content-header
 {
     background-color: #222222;
@@ -56,6 +51,7 @@
 
 .theme-list-group-item
 {
+    border: 1px solid #222222;
 }
 
 .theme-list-group-item:hover
@@ -85,4 +81,32 @@
 {
     display: inline-block; 
     padding-top: 5px;
+}
+
+.theme-content
+{
+    padding: 55px 60px;
+}
+
+
+.theme-content-dark 
+{
+    background-color: #222222;
+    color: white;
+    padding: 55px 60px;
+}
+
+@media (max-width: 500px)
+{
+    .theme-content 
+    {
+        padding: 55px 15px;
+    }
+
+    .theme-content-dark 
+    {
+        background-color: #222222;
+        color: white;
+        padding: 55px 15px;
+    }
 }
