--- a/css/shared.css
+++ b/css/shared.css
@@ -4,6 +4,50 @@
     width: 100%;
 }
 
+.image-container
+{
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.image-text-bottom-left
+{
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+}
+
+.image-text-top-left
+{
+    position: absolute;
+    top: 8px;
+    left: 16px;
+}
+
+.image-text-bottom-right
+{
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+}
+
+.image-text-top-right 
+{
+    position: absolute;
+    top: 8px;
+    right: 16px;
+}
+
+.image-text-centered
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 .mobile-photos 
 {
     display: none;
