--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,19 @@
 
     border: 1px solid #222222;
     height: 500px;
+    width: 100%;
+}
+
+#hiking-parallax-caption
+{
+    opacity: 0;
+    -webkit-transition: ease-in-out 1s;
+    transition: ease-in-out 1s;
+}
+
+#hiking-parallax:hover + #hiking-parallax-caption
+{
+    opacity: 1;
 }
 
 @media (max-width: 500px) 
