--- a/css/shared.css
+++ b/css/shared.css
@@ -48,7 +48,7 @@
 }
 
 
-.mobile-photos 
+.show-mobile
 {
     display: none;
 }
@@ -60,13 +60,13 @@
 
 @media (max-width: 500px) 
 {
-    .mobile-photos 
+    .show-mobile 
     {
         display: block;
     }
 
     .hide-mobile
     {
-        display: none;
+        display: none !important;
     }
 }
