--- a/layout/navbar.html
+++ b/layout/navbar.html
@@ -14,8 +14,8 @@
         </a>
     </div>
     <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-            <li><a href="index.html" id="navHome">Home</a></li>
+        <ul class="nav navbar-nav" style="font-size: 20px;">
+            <li><a href="index.html" id="navHome"><span class="fa fa-home"></span></a></li>
             <li><a href="projects.html" id="navProjects">Projects</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
