--- a/css/shared.css
+++ b/css/shared.css
@@ -86,6 +86,17 @@
     padding: 10px;
 }
 
+.not-selectable
+{
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 @media (max-width: 500px) 
 {
     .show-mobile 
