--- a/css/layout.css
+++ b/css/layout.css
@@ -33,7 +33,6 @@ body
     text-decoration: none;
 }
 
-
 #footer
 {
     padding-top: 30px;
@@ -42,11 +41,22 @@ body
     color: white;
 }
 
-
 /* Bootstrap override: */
 .navbar
 {
     margin-bottom: 0px;
+}
+
+.navbar-dropdown-item
+{
+    font-size: 16px;
+}
+
+/* Bootstrap Override */
+.dropdown-menu > li > a:hover
+{
+    background-color: #101010;
+    color: white;
 }
 
 .navbar-inverse .navbar-nav > li > a 
@@ -139,6 +149,16 @@ body
     .navbar 
     {
         border-radius: 0;
+    }
+}
+
+@media (max-width: 767px)
+{
+    /* Bootstrap Override */
+    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a
+    {
+        background-color: white;
+        color: black;
     }
 }
 
