Added A* Algorithm/Cleaned up code

--- a/layout/navbar.html
+++ b/layout/navbar.html
@@ -22,7 +22,7 @@
                 </a>  
                 <ul class="dropdown-menu" aria-labelledby="dropdown-projects">
                     <li><a class="navbar-dropdown-item dropdown-item" href="projects.html">GitHub Repos</a></li>
-                    <li><a class="navbar-dropdown-item dropdown-item" href="breadthfirst.html">Visualization</a></li>
+                    <li><a class="navbar-dropdown-item dropdown-item" href="visualization.html">Visualization</a></li>
                 </ul>
             </li>
         </ul>
