--- a/css/theme.css
+++ b/css/theme.css
@@ -3,7 +3,15 @@
     background-color: #222222;
     color: white;
     padding: 25px;
+    border: 1px solid white;
     border-radius: 10px;
+}
+
+.theme-text-area:hover hr, .theme-text-area:hover
+{
+    background-color: white;
+    color: black;
+    border: 1px solid black;
 }
 
 .theme-btn 
@@ -131,8 +139,11 @@
     background-color: #333333;
     color: white;
     padding: 25px 60px;
-    border-top: 1px solid darkgrey;
-    border-bottom: 1px solid darkgrey;
+}
+
+.theme-content-dark p
+{
+    font-size: 16px;
 }
 
 .theme-background
