Fixed collapse issue with column icons on home page. Added loader to projects page.

--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@
 
 @media (max-width: 500px) 
 {
-    #hiking-parallax 
+    #hiking-parallax, #hiking-parallax-caption
     {
         display: none;
     }
