--- a/layout/navbar.html
+++ b/layout/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse">
+<!--<div class="navbar navbar-inverse">
     <div class="navbar-header">
         <a class="navbar-brand" id="nav-name">Chad Jakoby</a>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -33,6 +33,48 @@
                 </a>
             </li>
             <li>
+                <a class="theme-social-linkedin hide-mobile" href="https://www.linkedin.com/in/chad-jakoby-084599bb" target="_blank">
+                    <i class="fa fa-lg fa-linkedin" aria-hidden="true"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>-->
+
+<div class="navbar navbar-expand-lg theme-color theme-bg sticky-top">
+    <a class="navbar-brand" id="nav-name">Chad Jakoby</a>
+    <a class="show-mobile" href="https://github.com/jakobyc" style="float: right; color: #83168e; padding-right: 10px;">
+        <i class="fa fa-lg fa-github" aria-hidden="true"></i>
+    </a>
+    <a class="show-mobile" href="https://www.linkedin.com/in/chad-jakoby-084599bb" style="float: right; color: #3570b3;">
+        <i class="fa fa-lg fa-linkedin" aria-hidden="true"></i>
+    </a>
+    <button type="button" class="navbar-toggler navbar-dark" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="navbar-collapse collapse">
+        <ul class="navbar-nav mr-auto" style="font-size: 20px;">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html" id="navHome"><span class="fa fa-home theme-color"></span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="dropdown-projects" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" style="cursor: pointer;">
+                    Projects   
+                </a>  
+                <ul class="dropdown-menu" aria-labelledby="dropdown-projects">
+                    <li><a class="navbar-dropdown-item dropdown-item" href="projects.html">GitHub Repos</a></li>
+                    <li><a class="navbar-dropdown-item dropdown-item" href="visualization.html">Visualization</a></li>
+                </ul>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li style="padding: 0px 15px;">
+                <a class="theme-social-git hide-mobile" href="https://github.com/jakobyc" target="_blank">
+                    <i class="fa fa-lg fa-github" aria-hidden="true"></i>
+                </a>
+            </li>
+            <li style="padding: 0px 15px;">
                 <a class="theme-social-linkedin hide-mobile" href="https://www.linkedin.com/in/chad-jakoby-084599bb" target="_blank">
                     <i class="fa fa-lg fa-linkedin" aria-hidden="true"></i>
                 </a>
