--- a/layout/navbar.html
+++ b/layout/navbar.html
@@ -41,8 +41,8 @@
     </div>
 </div>-->
 
-<div class="navbar navbar-expand-lg theme-color theme-bg sticky-top">
-    <a class="navbar-brand" id="nav-name">Chad Jakoby</a>
+<div class="navbar navbar-expand-lg theme-color theme-bg fixed-top">
+    <a class="navbar-brand" id="nav-name" href="/">Chad Jakoby</a>
     <a class="show-mobile" href="https://github.com/jakobyc" style="float: right; color: #83168e; padding-right: 10px;">
         <i class="fa fa-lg fa-github" aria-hidden="true"></i>
     </a>
@@ -54,10 +54,7 @@
     </button>
 
     <div class="navbar-collapse collapse">
-        <ul class="navbar-nav mr-auto" style="font-size: 20px;">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html" id="navHome"><span class="fa fa-home theme-color"></span></a>
-            </li>
+        <ul class="navbar-nav mr-auto" style="font-size: 1.15rem;">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="dropdown-projects" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" style="cursor: pointer;">
                     Projects   
@@ -69,13 +66,13 @@
             </li>
         </ul>
         <ul class="navbar-nav">
-            <li style="padding: 0px 15px;">
-                <a class="theme-social-git hide-mobile" href="https://github.com/jakobyc" target="_blank">
+            <li class="nav-item" style="padding: 0px 15px;">
+                <a class="nav-link theme-social-git hide-mobile" href="https://github.com/jakobyc" target="_blank">
                     <i class="fa fa-lg fa-github" aria-hidden="true"></i>
                 </a>
             </li>
-            <li style="padding: 0px 15px;">
-                <a class="theme-social-linkedin hide-mobile" href="https://www.linkedin.com/in/chad-jakoby-084599bb" target="_blank">
+            <li class="nav-item" style="padding: 0px 15px;">
+                <a class="nav-link theme-social-linkedin hide-mobile" href="https://www.linkedin.com/in/chad-jakoby-084599bb" target="_blank">
                     <i class="fa fa-lg fa-linkedin" aria-hidden="true"></i>
                 </a>
             </li>
